small fixing, search bar align

--- a/src/styles.css
+++ b/src/styles.css
@@ -148,4 +148,23 @@ ul {
     background: linear-gradient(140deg, rgba(255, 255, 204,1) 0%, rgba(255, 255, 204,1) 69%, rgba(102, 51, 0,1) 100%);
 
 }
+.search{
+    height: 35px;
+    margin-right: 5px;
+}
+
+.search-text{
+    height: 28px;
+
+    margin-right: 5px;
+}
+.search-bar{
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    margin: 0 auto;
+}
+.ball{
+    margin: auto;
+}
 
